# LinkShrink

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt  run_dev.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
include/: prometheus_metrics.hpp
include/handlers/: prometheus_handler.hpp
postgresql/schemas/: 01-init.sql
src/: main.cpp  prometheus_metrics.cpp
src/handlers/: prometheus_handler.cpp  redirect.cpp  redirect.hpp  shorten.cpp  shorten.hpp  stats.cpp  stats.hpp
src/models/: click_info.hpp
src/storage/: statistics_accumulator.cpp  statistics_accumulator.hpp
src/utils/: short_code.cpp  short_code.hpp  short_code_benchmark.cpp  short_code_test.cpp
static/: index.html  script.js  stats.html  style.css
tests/: conftest.py  test_basic.py
